package DesignPatterns.TemplateMethodPattern.Concretes;

import DesignPatterns.TemplateMethodPattern.Templates.CaffeineBeverage;

public class Coffee extends CaffeineBeverage {
    @Override
    public void brew() {
        System.out.println("Dripping coffee through filter");
    }

    @Override
    public void addCondiments() {
        System.out.println("Adding sugar and milk");
    }
}
